[gd_scene load_steps=9 format=3 uid="uid://bb3ksgxcevuy7"]

[ext_resource type="Script" path="res://Course/Main/Topic1/1.3.gd" id="1_oru1r"]
[ext_resource type="Theme" uid="uid://b6fk86oisl636" path="res://Assets/theme/panelHead.tres" id="2_i15tj"]
[ext_resource type="FontFile" uid="uid://58l2dvgu2fya" path="res://Assets/font/GermaniaOne-Regular.ttf" id="3_hdtoa"]
[ext_resource type="Texture2D" uid="uid://di4saqk627tjc" path="res://Assets/Background/gridBg.png" id="4_ijyap"]
[ext_resource type="Theme" uid="uid://vi17tkyrdjeh" path="res://Assets/theme/panel.tres" id="5_ip7yw"]
[ext_resource type="Texture2D" uid="uid://gdr1f0cjd8ln" path="res://Course/Main/Topic1/resource/b.png" id="6_ibv2i"]
[ext_resource type="Texture2D" uid="uid://bps60e8ulke3" path="res://Course/Main/Topic1/resource/c.png" id="7_plmre"]
[ext_resource type="Theme" uid="uid://c5v71qral7qcg" path="res://Assets/styles/MAQ.tres" id="7_q4ull"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oru1r")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="Panel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
theme = ExtResource("2_i15tj")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="btnBack" type="Button" parent="VBoxContainer/ColorRect/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_hdtoa")
theme_override_font_sizes/font_size = 36
text = "BACK "

[node name="ColorRect2" type="ColorRect" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0.619608, 0.490196, 0.156863, 0.729412)

[node name="ParallaxBackground" type="ParallaxBackground" parent="VBoxContainer"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="VBoxContainer/ParallaxBackground"]
motion_scale = Vector2(0.1, 0.1)
motion_mirroring = Vector2(1152, 648)

[node name="Sprite2D" type="Sprite2D" parent="VBoxContainer/ParallaxBackground/ParallaxLayer"]
scale = Vector2(0.900781, 0.901389)
texture = ExtResource("4_ijyap")
centered = false

[node name="ColorRect" type="Panel" parent="."]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
offset_left = 121.0
offset_top = 57.0
offset_right = 1004.0
offset_bottom = 654.0
size_flags_vertical = 3
theme = ExtResource("5_ip7yw")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.141
anchor_top = 0.145
anchor_right = 0.863
anchor_bottom = 1.0
offset_left = -16.432
offset_top = 2.04
offset_right = 9.82404
offset_bottom = 3076.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="part1" type="VBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="txtTitle" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/part1"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_hdtoa")
theme_override_font_sizes/font_size = 81
text = "Creating class in Java? "
horizontal_alignment = 1
autowrap_mode = 2

[node name="HSeparator" type="HSeparator" parent="MarginContainer/ScrollContainer/VBoxContainer/part1"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="RichTextLabel2" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/part1"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_hdtoa")
theme_override_font_sizes/font_size = 31
text = "Now, you are going to learn how to translate a Unified Modelling Language(UML) like this:







"
autowrap_mode = 2

[node name="Sprite2D2" type="Sprite2D" parent="MarginContainer/ScrollContainer/VBoxContainer/part1"]
position = Vector2(279, 385)
scale = Vector2(1.11034, 1.11034)
texture = ExtResource("6_ibv2i")

[node name="RichTextLabel4" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/part1"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_hdtoa")
theme_override_font_sizes/font_size = 31
text = "
into a coding like this:












"
autowrap_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/ScrollContainer/VBoxContainer/part1"]
position = Vector2(287, 849)
scale = Vector2(1.2381, 1.2381)
texture = ExtResource("7_plmre")

[node name="RichTextLabel5" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/part1"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_hdtoa")
theme_override_font_sizes/font_size = 31
text = "
Let's break down what's going on at the UML

Class name Puppy

Attributes:
  - name with String data type
  - age with integer data type
  - fur with String data type

Methods:
  - walking with void return type
  - eaing with void return type and integer parameter
  - barking with String return type
"
autowrap_mode = 2

[node name="HSeparator4" type="HSeparator" parent="MarginContainer/ScrollContainer/VBoxContainer/part1"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="RichTextLabel7" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/part1"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_hdtoa")
theme_override_font_sizes/font_size = 31
text = "Extra!!
the plus(+) and minus(-) in the UML determine whether if the attributes or methods can be access by other classes. it called modifier"
autowrap_mode = 2

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/ScrollContainer/VBoxContainer/part1"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="MAQ" type="MarginContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/part1"]
layout_mode = 2
theme = ExtResource("7_q4ull")

[node name="Panel" type="Panel" parent="MarginContainer/ScrollContainer/VBoxContainer/part1/MAQ"]
layout_mode = 2
theme = ExtResource("7_q4ull")

[node name="MAQ" type="VBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/part1/MAQ"]
layout_mode = 2

[node name="Maq Title" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/part1/MAQ/MAQ"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_hdtoa")
theme_override_font_sizes/font_size = 31
text = "Question 1:"
autowrap_mode = 2

[node name="RichTextLabel3" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/part1/MAQ/MAQ"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_hdtoa")
theme_override_font_sizes/font_size = 31
text = "Which attribute from the class puppy can hold a value \"Fatin\"?"
autowrap_mode = 2

[node name="questions" type="VBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/part1/MAQ/MAQ"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 6

[node name="answer1" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer/part1/MAQ/MAQ/questions"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_hdtoa")
text = "name"
alignment = 0

[node name="answer2" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer/part1/MAQ/MAQ/questions"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_hdtoa")
text = "age"
alignment = 0
text_overrun_behavior = 2

[node name="answer3" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer/part1/MAQ/MAQ/questions"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_hdtoa")
text = "fur"
alignment = 0

[node name="answer4" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer/part1/MAQ/MAQ/questions"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_hdtoa")
text = "Operators"
alignment = 0

[node name="part2" type="VBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="RichTextLabel4" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/part2"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_hdtoa")
theme_override_font_sizes/font_size = 31
text = "Excellent! when you declaring your attribute or method, make sure its name is logical to its uses."
autowrap_mode = 2

[node name="HSeparator5" type="HSeparator" parent="MarginContainer/ScrollContainer/VBoxContainer/part2"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="RichTextLabel5" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/part2"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_hdtoa")
theme_override_font_sizes/font_size = 31
text = "

-Class-
declaring class is simple. 

[modifier] class [class name]{ 
       [body of code]
 }

-Attribute-

[modifier][data type][attribute name];

-Method-
unlike class, method required parentheses( () ) for receiving parameters.

[modifier] [return type] [method name] () {
      [body of code]
}
"
autowrap_mode = 2

[node name="MAQ" type="MarginContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/part2"]
layout_mode = 2
theme = ExtResource("7_q4ull")

[node name="Panel" type="Panel" parent="MarginContainer/ScrollContainer/VBoxContainer/part2/MAQ"]
layout_mode = 2
theme = ExtResource("7_q4ull")

[node name="MAQ" type="VBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/part2/MAQ"]
layout_mode = 2

[node name="Maq Title" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/part2/MAQ/MAQ"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_hdtoa")
theme_override_font_sizes/font_size = 31
text = "Question 2:"
autowrap_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/ScrollContainer/VBoxContainer/part2/MAQ/MAQ"]
position = Vector2(390, 162)
scale = Vector2(1.03448, 1.03448)
texture = ExtResource("6_ibv2i")

[node name="RichTextLabel3" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/part2/MAQ/MAQ"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_hdtoa")
theme_override_font_sizes/font_size = 31
text = "






Based from the UML, which one from these declaration is wrong? "
autowrap_mode = 2

[node name="questions" type="VBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/part2/MAQ/MAQ"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 6

[node name="answer1" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer/part2/MAQ/MAQ/questions"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_hdtoa")
text = "public class Puppy{

}"
alignment = 0

[node name="answer2" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer/part2/MAQ/MAQ/questions"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_hdtoa")
text = "public string eating(int food){

}"
alignment = 0
text_overrun_behavior = 2

[node name="answer3" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer/part2/MAQ/MAQ/questions"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_hdtoa")
text = "public String fur;"
alignment = 0

[node name="answer4" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer/part2/MAQ/MAQ/questions"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_hdtoa")
text = "private String name;"
alignment = 0

[node name="part3" type="VBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/ScrollContainer/VBoxContainer/part3"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="RichTextLabel3" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/part3"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_hdtoa")
theme_override_font_sizes/font_size = 31
text = "Marvelous! you have a great observing skill. Good job!

Now, time for the best part. Coding excercise!"
autowrap_mode = 2

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/ScrollContainer/VBoxContainer/part3"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Button" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer/part3"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_hdtoa")
text = "NEXT
"

[connection signal="pressed" from="VBoxContainer/ColorRect/HBoxContainer/btnBack" to="." method="_on_btn_back_pressed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/VBoxContainer/part1/MAQ/MAQ/questions/answer1" to="." method="_on_answer_1_pressed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/VBoxContainer/part2/MAQ/MAQ/questions/answer2" to="." method="_on_answer_2_pressed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/VBoxContainer/part3/Button" to="." method="_on_button_pressed"]
